# Satvis

./: .gitignore  README.md  pyproject.toml  spec-file.txt
config/: satpy.yaml  satvis_template.yaml
etc/: areas.yaml
scripts/BAWS/: plot_bloom_day_count.py
src/: data_handler.py
src/ALGOTLvisTest/: README.md  algotlTest.ipynb  bboxTest.ipynb  kvakhTest.ipynb  msiTest.ipynb
src/ALGOTLvisTest/.ipynb_checkpoints/: algotlTest-checkpoint.ipynb
src/satvis/: __init__.py  _config.py  algotlvis.py  bawsvis.py  data_handler.py  writers.py  wsawsvis.py
src/satvis/config/: satvis.yaml  satvis_template.yaml
src/satvis/etc/: areas.yaml  satvis.yaml
src/satvistest/: Joyplot.ipynb  JoyplotTest.ipynb  LineplotTest.ipynb  bottenviken.ipynb  dataStructureTest.ipynb  dataVisTest.ipynb  data_handler.py  xarrayTest.ipynb  xarrayTest_single.ipynb  xarrayTest_singleDay.ipynb
src/western_seas_algal_blooms/: Pipfile  README.md  T34VDK_20220627T100611_B01.jp2  binary_colormap.npy  dataset_selector.py  flag_tools.py  main.py  tests.ipynb  tests_data_selection.ipynb  tests_eumartools.ipynb  tests_rolling.ipynb
tests/: data_handler_tests.py  test_data_handler.py  test_writers.py
