[project]
name = "satvis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christoffer Olsson", email = "christoffer.olsson@smhi.se" }
]
dependencies = [
    "satpy>=0.48.0",
    "donfig>=0.8.1.post0",
    "geopandas>=0.14.4",
    "pyogrio>=0.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/satvis"]

[tool.pytest._ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
# Use single quotes for non-triple-quoted strings.
quote-style = "single"
